@@ -1,4 +1,5 @@
   - Add support for headers exchanges
+  - Add a serialize callback to Output::AMQP for simpler header construction
   - Add support for making exchanges auto-delete
   - Remove queue_type attribute as there is no such thing in AMQP
   - Auto-delete all exchanges and queues in author-only tests
